syntax = "proto3";

package api;

service Calculator {
  rpc Add (PairOfNumbers) returns (Results);
  rpc Subtract (PairOfNumbers) returns (Results);
  rpc Multiply (PairOfNumbers) returns (Results);
  rpc Divide (PairOfNumbers) returns (Results);
}

message PairOfNumbers {
  float number1 = 1;
  float number2 = 2;
}

message Results {
  float value = 1;
}
